write abstract and intro

--- a/CPJ_floodinsurance.Rmd
+++ b/CPJ_floodinsurance.Rmd
@@ -29,7 +29,7 @@ link-citations: true
 reference-section-title: References
 linkcolor: blue
 urlcolor: blue
-abstract: "Abstract will go here"
+abstract: "Welfare improving buyouts of high flood risk homes need to be carefully designed to overcome political opposition. I assemble a panel of real estate and flood insurance policy data to estimate whether holding an insurance policy impacts homeowners' likelihood of selling their home following a flood. The results are suggestive that holding insurance lowers sale probability following a flood, however confidence is low due to collinearity between the instrument and the fixed effects."
 ---
 
 ```{r setup, include=FALSE}
@@ -60,13 +60,17 @@ source("merge_and_analysis.R")
 
 # Introduction
 
-Motivation: severe repetitive loss properties and buyouts
+Flood damage prevention and recovery has been a major expediture for every level of government in the United States for nearly a century, and climate change is leading to floods of increased frequency and intensity. Decades of primarily local and state policy has encouraged development of flood plains and coastal zones, creating substantial new private wealth financed by substantial risk exposure for the federal government. The US continues to spend vast amounts on what amounts to various subsidies for landowners in flood prone areas: from subsidized, federally underwritten flood insurance following the collapse of the private flood insurance market after Hurricane Andrew, to major capital investments for dredging, levee construction and maintenance, and coastal erosion prevention. Taken together these subsidies and pro-development policies has led to a large number of properties in flood-prone areas that are worth less than the ongoing stream of subsidy involved in maintaining them.
 
-Flood damage prevention and recovery has been a major expediture for every level of government in the United States for nearly a century, and climate change is leading to floods of increased frequency and intensity. 
+The most severe examples of this problem are so called severe repetitive loss (SRL) properties. These structures, usually older homes not adapted to withstand regular flood damage, are insured by the National Flood Insurance Program (NFIP), and receive on average larger sums from paid claims than they pay in premiums, a situation that is only possible because the NFIP sets premiums below actuarially fair levels. The NFIP was originally established by Congress to shift some of the cost and risk of development in flood prone areas from the government onto property owners. However, these pricing practices have left the NFIP with a substantial debt load, and a deficit that currently exceeds $1 billion per year. 
 
-Summary of method and results
+Congress has made several attempts to reduce the working deficit of the NFIP, and any such plan will need to address SRL properties. For such properties, it would be welfare improving to simply buy the home and tear it down. Doing so would avoid the substantial insurance losses and be a net gain to society, without even having to consider the additional avoided costs for infrastructure, US Army Corps of Engineers management projects, etc. The Federal Emergency Management Agency (FEMA) has pursued buyouts of SRL properties in recent years, but these proceedings are slow, costly, and are broadly politically unpopular. To address this problem on a broad scale, policymakers will need to think carefully about how homeowners think about the choice to rebuild or relocate in the wake of a disaster. By identifying property owners who are most likely to sell their homes following a flood, the government can design a policy to purchase those homes instead of a new private buyer, and then permanently remove the home from the market. 
 
-takeaways and literature contributions
+This paper attempts to provide evidence to support that policymaking process by exploring how holding flood insurance impacts a homeowner's decision whether to sell their home in the wake of a flood. To answer this question, I combine several detailed micro datasets: real estate assessment and transaction records from county public records, collected in Zillow's ZTRAX database, and NFIP data on flood policies written and claims filed. Using these data, I construct a panel of home transactions, flood events, and flood insurance takeup for 2009–2016 to estimate with various lags both the main effect of floods on home sale probabiity, and the interaction effect of holding flood insurance and experiencing a flood on home sale probability. Because the choice of insurance takeup is endogenous, I instrument for insurance using exogenous price variation caused by two pieces of federal legislation: the Biggert Waters Flood Insurance Reform Act of 2012 and the Homeowner Flood Insurance Affordability Act of 2014. Using this approach leads to estimates of questionable validity due to potential collinearity between the instrument and year fixed effects, but they suggest that homeowners who hold flood insurance may be less likely to sell their homes following a flood. If refined and confirmed, these results would suggest, perhaps unsurprisingly, that the current structure of NFIP policies provide a particularly acute incentive to live in flood zones in the aftermath of a flood event, and policymakers will need to think holistically about these incentives when designing a buyout program. 
+
+This paper contributes to a growing literature on consumer responses to natural disasters, particularly floods, and the welfare and policy implications of existing flood insurance rate structures. 
+
+citations: Kate's paper, that book, buyouts paper, SRL reports, Gallagher paper, BW and HFIAA legislation, NFIP deficit
 
 # Data
 
@@ -76,7 +80,7 @@ This research is built upon two primary data sources: flood insurance policies, 
 
 FEMA publishes deidentified micro data on all NFIP policies underwritten by the federal government, which covers nearly all flood insurance policies written in the United States. The data describes the amount of coverage, premia and fees, deductibles, and attributes about the covered property. Properties are identified to the census tract, and also have flood zone and year of construction, which I use to match with the home data. Flood insurance policy data are available for the years `r policies[, min(year(policyEffectiveDate))]`—`r policies[, max(year(policyEffectiveDate))]`. I discard policies that cover only home contents and not the structure itself. Figure \@ref(fig:first-stage-graph) shows insurance takeup over time, with the two major reforms to insurance premia, Biggert-Waters and HFIAA, indicated. Takeup is shown separately for adapted and non-adapted homes, as they are subject to different premium rate schedules and different price shocks.
 
-The NFIP claims data details every claim filed with the NFIP in the state from `r claims[, min(year(dateOfLoss))]` through `r claims[, max(year(dateOfLoss))]` The data include details about the insured property, the insurance coverage, and the loss event and subsequent claim and payout. I discard claims that cover only loss of contents (either due to the policyholder not holding any building coverage, or not submitting a claim for building damage), as well as those with listed payouts that exceed the maximum coverage of $250,000. The claims data are used to identify which properties were exposed to flooding in a given year. Since a given property's vulnerability to flood damage is endogenous, through defensive investments, home elevation, etc, I define exposure to flooding by indicating whether a flood claim was filed within the intersection of a census tract and flood zone in each year. 
+The NFIP claims data details every claim filed with the NFIP in the state from `r claims[, min(year(dateOfLoss))]` through `r claims[, max(year(dateOfLoss))]` The data include details about the insured property, the insurance coverage, and the loss event and subsequent claim and payout. I discard claims that cover only loss of contents (either due to the policyholder not holding any building coverage, or not submitting a claim for building damage), as well as those with listed payouts that exceed the maximum coverage of $250,000. The claims data are used to identify which properties were exposed to flooding in a given year. Since a given property's vulnerability to flood damage is endogenous, through defensive investments, home elevation, etc., I define exposure to flooding by indicating whether a flood claim was filed within the intersection of a census tract and flood zone in each year. 
 
 Finally, I also use the national flood hazard layer geospatial database to assign individual properties to flood zones, to allow matching with the policies and claims data.
 
@@ -275,4 +279,4 @@ Of course, this research design is not sufficient to provide unambiguous policy 
 
 Understanding the behavior of homeowners in flood zones is of increasing importance as climate change exacerbates flood risk and the corresponding government outlays. Buying out owners of severe repetitve loss properties is likely to be an important part of achieving long term financial stability for the National Flood Insurance Program, and reducing the risk to life and property in flood hazard areas. Designing such a policy to be feasible and politically palatable will be a substantial challenge, and an understanding of the behavior of homeowners will provide important insight in this policy design. This research attempts to quantify whether experiencing a flood event makes homeowners more or less likely to sell their home in subsequent years, and whether holding flood insurance moderates that effect. Using data on flood insurance policies and claims, as well as real estate assessment and transaction data, I estimate the probability of home sale using concurrent and lagged indicators of flood events and insurance, instrumenting for insurance takeup using exogenous policy variation in flood insurance premia. Results are mixed, and are likely biased due to ill-constructed fixed effects or insufficient variation in the instrument. However, they are suggestive that homeowners holding flood insurance may be less likely to sell their homes in the wake of a flood. This result, if strengthened, would indicate that FEMA will not find much success in encouraging existing NFIP policyholders to accept a buyout after a flood without additional compensation. If nothing else, they do not represent low hanging fruit for property buyouts.
 
-Additional work is ongoing to improve and build upon this research. I am working to sharpen the model identification by adjusting the construction of the temporal fixed effects to remove potential collinearity with the instrument. I believe Biggert-Waters and HFIAA provide sufficient price variation to impact takeup, but the model will need to be refined to isolate this variation from broader year to year trends in the houing market. A more rigorous processing of the real estate data may allow for additional hedonic covariates to be included, allowing for greater explanatory power. More adept matching of real estate and NFIP data could improve sample construction, reduce potential biases and errors, and improve overall model power. In addition, a cleaner dataset could allow me to explore more of the potential underlying mechanisms driving any effects on transaction probability, such as differing rates of foreclosure. Finally, more precise data from the NFIP could provide direct matching of homes with flood policies and claims, removing a potentially significant source of error in this analysis from the imprecise matching method currently employed to construct the panel. 
+Additional work is ongoing to improve and build upon this research. I am working to sharpen the model identification by adjusting the construction of the temporal fixed effects to remove potential collinearity with the instrument. I believe Biggert-Waters and HFIAA provide sufficient price variation to impact takeup, but the model will need to be refined to isolate this variation from broader year to year trends in the houing market. A more rigorous processing of the real estate data may allow for additional hedonic covariates to be included, allowing for greater explanatory power. More adept matching of real estate and NFIP data could improve sample construction, reduce potential biases and errors, and improve overall model power. In addition, a cleaner dataset could allow me to explore more of the potential underlying mechanisms driving any effects on transaction probability, such as differing rates of foreclosure. Finally, more precise data from the NFIP could provide direct matching of homes with flood policies and claims, removing a potentially significant source of error in this analysis from the imprecise matching method currently employed to construct the panel.
