--- a/CPJ_floodinsurance.Rmd
+++ b/CPJ_floodinsurance.Rmd
@@ -1,6 +1,6 @@
 ---
 title: Flood Insurance Impact on Post-Flood Home Sales
-author: Connor P. Jackson
+author: "Connor P. Jackson[^disclaim]"
 date: "`r format(Sys.time(), '%B %d, %Y - %H:%M %Z')`"
 output:
   bookdown::pdf_document2:
@@ -32,6 +32,8 @@ urlcolor: blue
 abstract: "Welfare improving buyouts of high flood risk homes need to be carefully designed to overcome political opposition. I assemble a panel of real estate and flood insurance policy data to estimate whether holding an insurance policy impacts homeowners' likelihood of selling their home following a flood. The results are suggestive that holding insurance lowers sale probability following a flood, however confidence is low due to collinearity between the instrument and the fixed effects."
 ---
 
+[^disclaim]: Real Estate data provided by Zillow through the Zillow Transaction and Assessment Dataset (ZTRAX). More information on accessing the data can be found at <http://www.zillow.com/ztrax>. The results and opinions are those of the author and do not reflect the position of Zillow Group. NFIP Policies and Claims data provided by FEMA through the OpenFEMA API. FEMA and the Federal Government cannot vouch for the data or analyses derived from these data after the data have been retrieved from the Agency's website(s) and/or Data.gov. This product uses the Federal Emergency Management Agency’s API, but is not endorsed by FEMA.
+
 ```{r setup, include=FALSE}
 library(bookdown)
 library(knitr)
@@ -60,29 +62,27 @@ source("merge_and_analysis.R")
 
 # Introduction
 
-Flood damage prevention and recovery has been a major expediture for every level of government in the United States for nearly a century, and climate change is leading to floods of increased frequency and intensity. Decades of primarily local and state policy has encouraged development of flood plains and coastal zones, creating substantial new private wealth financed by substantial risk exposure for the federal government. The US continues to spend vast amounts on what amounts to various subsidies for landowners in flood prone areas: from subsidized, federally underwritten flood insurance following the collapse of the private flood insurance market after Hurricane Andrew, to major capital investments for dredging, levee construction and maintenance, and coastal erosion prevention. Taken together these subsidies and pro-development policies has led to a large number of properties in flood-prone areas that are worth less than the ongoing stream of subsidy involved in maintaining them.
+Flood damage prevention and recovery has been a major expediture for every level of government in the United States for nearly a century, and climate change is leading to floods of increased frequency and intensity. Decades of primarily local and state policy has encouraged development of flood plains and coastal zones, creating substantial new private wealth financed by substantial risk exposure for the federal government [@Gaul2019]. The US continues to spend vast amounts on what amounts to various subsidies for landowners in flood prone areas: from subsidized, federally underwritten flood insurance to major capital investments for dredging, levee construction and maintenance, and coastal erosion prevention. Taken together these subsidies and pro-development policies has led to a large number of properties in flood-prone areas that are worth less than the ongoing stream of subsidy involved in maintaining them.
 
-The most severe examples of this problem are so called severe repetitive loss (SRL) properties. These structures, usually older homes not adapted to withstand regular flood damage, are insured by the National Flood Insurance Program (NFIP), and receive on average larger sums from paid claims than they pay in premiums, a situation that is only possible because the NFIP sets premiums below actuarially fair levels. The NFIP was originally established by Congress to shift some of the cost and risk of development in flood prone areas from the government onto property owners. However, these pricing practices have left the NFIP with a substantial debt load, and a deficit that currently exceeds $1 billion per year. 
+The most severe examples of this problem are so called severe repetitive loss (SRL) properties [@NationalFloodInsuranceProgram2020]. These structures, usually older homes not adapted to withstand regular flood damage, are insured by the National Flood Insurance Program (NFIP), and receive on average larger sums from paid claims than they pay in premiums, a situation that is only possible because the NFIP sets premiums below actuarially fair levels. The NFIP was originally established by Congress to shift some of the cost and risk of development in flood prone areas from the government onto property owners. However, these pricing practices have left the NFIP with a substantial debt load, and a deficit that currently exceeds $1 billion per year [@CBO2017]. The ongoing fiscal problems of the NFIP along with its conflicting mandates of moving risk from the government to homeowners and maintaining affordability has been a topic of research and discussion for more than a decade [@Miller2019; @NationalAcademiesofSciencesandMedicine2016]. 
 
-Congress has made several attempts to reduce the working deficit of the NFIP, and any such plan will need to address SRL properties. For such properties, it would be welfare improving to simply buy the home and tear it down. Doing so would avoid the substantial insurance losses and be a net gain to society, without even having to consider the additional avoided costs for infrastructure, US Army Corps of Engineers management projects, etc. The Federal Emergency Management Agency (FEMA) has pursued buyouts of SRL properties in recent years, but these proceedings are slow, costly, and are broadly politically unpopular. To address this problem on a broad scale, policymakers will need to think carefully about how homeowners think about the choice to rebuild or relocate in the wake of a disaster. By identifying property owners who are most likely to sell their homes following a flood, the government can design a policy to purchase those homes instead of a new private buyer, and then permanently remove the home from the market. 
+Congress has made several attempts to reduce the working deficit of the NFIP, and any such plan will need to address SRL properties. For such properties, it would be welfare improving to simply buy the home and tear it down. Doing so would avoid the substantial insurance losses and be a net gain to society, without even having to consider the additional avoided costs for infrastructure, US Army Corps of Engineers management projects, etc. The Federal Emergency Management Agency (FEMA) has pursued buyouts of SRL properties in recent years, but these proceedings are slow, costly, and are broadly politically unpopular [@Weber2019; @Salvesen2018]. To address this problem on a broad scale, policymakers will need to think carefully about how homeowners think about the choice to rebuild or relocate in the wake of a disaster. By identifying property owners who are most likely to sell their homes following a flood, the government can design a policy to purchase those homes instead of a new private buyer, and then permanently remove the home from the market. 
 
-This paper attempts to provide evidence to support that policymaking process by exploring how holding flood insurance impacts a homeowner's decision whether to sell their home in the wake of a flood. To answer this question, I combine several detailed micro datasets: real estate assessment and transaction records from county public records, collected in Zillow's ZTRAX database, and NFIP data on flood policies written and claims filed. Using these data, I construct a panel of home transactions, flood events, and flood insurance takeup for 2009–2016 to estimate with various lags both the main effect of floods on home sale probabiity, and the interaction effect of holding flood insurance and experiencing a flood on home sale probability. Because the choice of insurance takeup is endogenous, I instrument for insurance using exogenous price variation caused by two pieces of federal legislation: the Biggert Waters Flood Insurance Reform Act of 2012 and the Homeowner Flood Insurance Affordability Act of 2014. Using this approach leads to estimates of questionable validity due to potential collinearity between the instrument and year fixed effects, but they suggest that homeowners who hold flood insurance may be less likely to sell their homes following a flood. If refined and confirmed, these results would suggest, perhaps unsurprisingly, that the current structure of NFIP policies provide a particularly acute incentive to live in flood zones in the aftermath of a flood event, and policymakers will need to think holistically about these incentives when designing a buyout program. 
+This paper attempts to provide evidence to support that policymaking process by exploring how holding flood insurance impacts a homeowner's decision whether to sell their home in the wake of a flood. To answer this question, I combine several detailed micro datasets: real estate assessment and transaction records from county public records, collected in Zillow's ZTRAX database [@ZillowGroup2020], and NFIP data on flood policies written and claims filed. Using these data, I construct a panel of home transactions, flood events, and flood insurance takeup for 2009–2016 to estimate with various lags both the main effect of floods on home sale probabiity, and the interaction effect of holding flood insurance and experiencing a flood on home sale probability. Because the choice of insurance takeup is endogenous, I instrument for insurance using exogenous price variation caused by two pieces of federal legislation: the Biggert Waters Flood Insurance Reform Act of 2012 and the Homeowner Flood Insurance Affordability Act of 2014. Using this approach leads to estimates of questionable validity due to potential collinearity between the instrument and year fixed effects, but they suggest that homeowners who hold flood insurance may be less likely to sell their homes following a flood. If refined and confirmed, these results would suggest, perhaps unsurprisingly, that the current structure of NFIP policies provide a particularly acute incentive to live in flood zones in the aftermath of a flood event, and policymakers will need to think holistically about these incentives when designing a buyout program. 
 
-This paper contributes to a growing literature on consumer responses to natural disasters, particularly floods, and the welfare and policy implications of existing flood insurance rate structures. 
-
-citations: Kate's paper, that book, buyouts paper, SRL reports, Gallagher paper, BW and HFIAA legislation, NFIP deficit
+This paper contributes to a growing literature on consumer responses to natural disasters, particularly floods, and the welfare and policy implications of existing flood insurance rate structures. @Gallagher2014 shows that insurance takeup is not perfectly rational, and depends on salience of flood risk. @Wagner2019 tests for selection in the flood insurance market, and describes how risk mispercetion and other frictions in insurance takeup distort demand, and thus lead to different welfare effects of reforms than a standard expected utility framework would suggest. @Peralta2019 explores the location sorting effects of subsidized flood insurance. This paper most closely builds on the work of @Zivin2020, who test directly for the impact of hurricanes on housing markets. The authors look for impacts on housing prices and transaction probability of hurricane-force winds, and also explore the subsequent demographic changes of the new home buyers. This research follows the methodology of @Zivin2020, but uses flood events rather than wind exposure as a proxy for flood damage, and is not limited to high-damage events like hurricanes. 
 
 # Data
 
-This research is built upon two primary data sources: flood insurance policies, claims and flood zones from the National Flood Insurance Program, and real estate assessment and transaction records from the Zillow ZTRAX dataset. I focus on North Carolina, which is one of the primary states covered by NFIP policies and receiving claims. North Carolina was selected based on its high frequency of tropical storms and flooding incidents, complete coverage of digital flood maps, and variation in community characteristics in special flood hazard areas. Much of North Carolina's severe weather comes in the form of large amounts of precipitation and storm surge, rather than damaging winds, which are not covered by the NFIP. In addition, nearly all of North Carolina's counties (including all of its coastal counties) have digitized flood insurance rate maps (FIRMs), which allows me to identify the flood zone of nearly every property in the state. 
+This research is built upon two primary data sources: flood insurance policies, claims and flood zones from the National Flood Insurance Program, and real estate assessment and transaction records from the Zillow ZTRAX dataset [@ZillowGroup2020]. I focus on North Carolina, which is one of the primary states covered by NFIP policies and receiving claims. North Carolina was selected based on its high frequency of tropical storms and flooding incidents, complete coverage of digital flood maps, and variation in community characteristics in special flood hazard areas. Much of North Carolina's severe weather comes in the form of large amounts of precipitation and storm surge, rather than damaging winds, which are not covered by the NFIP. In addition, nearly all of North Carolina's counties (including all of its coastal counties) have digitized flood insurance rate maps (FIRMs), which allows me to identify the flood zone of nearly every property in the state. 
 
 ## Flood Insurance Policies and Claims
 
-FEMA publishes deidentified micro data on all NFIP policies underwritten by the federal government, which covers nearly all flood insurance policies written in the United States. The data describes the amount of coverage, premia and fees, deductibles, and attributes about the covered property. Properties are identified to the census tract, and also have flood zone and year of construction, which I use to match with the home data. Flood insurance policy data are available for the years `r policies[, min(year(policyEffectiveDate))]`—`r policies[, max(year(policyEffectiveDate))]`. I discard policies that cover only home contents and not the structure itself. Figure \@ref(fig:first-stage-graph) shows insurance takeup over time, with the two major reforms to insurance premia, Biggert-Waters and HFIAA, indicated. Takeup is shown separately for adapted and non-adapted homes, as they are subject to different premium rate schedules and different price shocks.
+FEMA publishes deidentified micro data on all [NFIP policies](https://www.fema.gov/openfema-data-page/openfema-dataset-fima-nfip-redacted-policies--v1) underwritten by the federal government, which covers nearly all flood insurance policies written in the United States. The data describes the amount of coverage, premia and fees, deductibles, and attributes about the covered property. Properties are identified to the census tract, and also have flood zone and year of construction, which I use to match with the home data. Flood insurance policy data are available for the years `r policies[, min(year(policyEffectiveDate))]`—`r policies[, max(year(policyEffectiveDate))]`. I discard policies that cover only home contents and not the structure itself. Figure \@ref(fig:first-stage-graph) shows insurance takeup over time, with the two major reforms to insurance premia, Biggert-Waters and HFIAA, indicated. Takeup is shown separately for adapted and non-adapted homes, as they are subject to different premium rate schedules and different price shocks.
 
-The NFIP claims data details every claim filed with the NFIP in the state from `r claims[, min(year(dateOfLoss))]` through `r claims[, max(year(dateOfLoss))]` The data include details about the insured property, the insurance coverage, and the loss event and subsequent claim and payout. I discard claims that cover only loss of contents (either due to the policyholder not holding any building coverage, or not submitting a claim for building damage), as well as those with listed payouts that exceed the maximum coverage of $250,000. The claims data are used to identify which properties were exposed to flooding in a given year. Since a given property's vulnerability to flood damage is endogenous, through defensive investments, home elevation, etc., I define exposure to flooding by indicating whether a flood claim was filed within the intersection of a census tract and flood zone in each year. 
+The [NFIP claims data](https://www.fema.gov/openfema-data-page/fima-nfip-redacted-claims-v1) details every claim filed with the NFIP in the state from `r claims[, min(year(dateOfLoss))]` through `r claims[, max(year(dateOfLoss))]` The data include details about the insured property, the insurance coverage, and the loss event and subsequent claim and payout. I discard claims that cover only loss of contents (either due to the policyholder not holding any building coverage, or not submitting a claim for building damage), as well as those with listed payouts that exceed the maximum coverage of $250,000. The claims data are used to identify which properties were exposed to flooding in a given year. Since a given property's vulnerability to flood damage is endogenous, through defensive investments, home elevation, etc., I define exposure to flooding by indicating whether a flood claim was filed within the intersection of a census tract and flood zone in each year. 
 
-Finally, I also use the national flood hazard layer geospatial database to assign individual properties to flood zones, to allow matching with the policies and claims data.
+Finally, I also use the [national flood hazard layer](https://www.fema.gov/flood-maps/national-flood-hazard-layer) geospatial database to assign individual properties to flood zones, to allow matching with the policies and claims data.
 
 ```{r first-stage-graph, echo=FALSE, fig.cap="Flood insurance adoption, driven by Biggert-Waters and HFIAA, separately for adapted and non-adapted homes. The key source of variation in my first stage.", fig.dim=c(5,3.5)}
 firststage <- tzy_panel[in_sample == TRUE, .(polfrac = sum(policies_count) / sum(properties_count)), keyby = .(year, adapted)]
@@ -90,8 +90,6 @@ ggplot(firststage, aes(x=year, y=polfrac)) + geom_point(aes(color = adapted, sha
 ```
 
 ## Housing Assessment and Transactions
-
-First page footnote: Data provided by Zillow through the Zillow Transaction and Assessment Dataset (ZTRAX). More information on accessing the data can be found at <http://www.zillow.com/ztrax>. The results and opinions are those of the author and do not reflect the position of Zillow Group.
 
 The [ZTRAX data](https://www.zillow.com/research/ztrax/) are a real estate database of properties comprised of both assessor records and real estate transaction records, compiled into a nationwide database by Zillow. The assessor data include details about the parcel and primary structure, location (street address, census tract, and latitude and longitude), and value (assessed and market values). This table is used to identify the sample of North Carolina homes. I limit the sample to single family homes, excluding rural residences (homes on productive agricultural land) as well as condominums and similar structures. Assessment data are available from `r nchomes[, min(year(record_date))]` through `r nchomes[, max(year(record_date))]`.
 
